<resources>
    <string name="app_name">My F-Zone</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="message_button_desc" translatable="false">Message Button</string>
    <string name="list_button_desc" translatable="false">List Button</string>
    <string name="account_button_desc" translatable="false">Account Button</string>
    <string name="input_mail_hint">Adresse mail</string>
    <string name="input_password_hint">Mot de passe</string>
    <string name="input_lastName_hint">Nom</string>
    <string name="input_firstName_hint">Prénom</string>
    <string name="input_mail_helper">Entrez votre adresse mail</string>
    <string name="input_mdp_helper">Entrez un mot de passe</string>
    <string name="input_mdp_helper_login">Entrez votre mot de passe</string>
    <string name="input_firstName_helper">Entrez votre prénom</string>
    <string name="input_lastName_helper">Entrez votre nom</string>
    <string name="become_coach">Devenir Coach</string>
    <string name="login_coach">Connexion</string>
    <string name="no_account_string">Vous n\'avez pas de compte ?</string>
    <string name="already_has_account_string">Vous avez déjà un compte ?</string>
    <string name="empty_string" translatable="false"> </string>
    <string name="image_club">Image club</string>
    <string name="club_subtitle">Sous-titre du club</string>
    <string name="club_name">Nom du club</string>
    <string name="email_trans" translatable="false">email_transition_field</string>
    <string name="password_trans" translatable="false">password_transition_field</string>
    <string name="button_trans" translatable="false">button_transition</string>
    <string name="hint_required">Champ requis</string>
    <string name="welcome_message">Bienvenue</string>
    <string name="welcome_back_message">Bienvenue à nouveau</string>
    <string name="sign_in_error">Erreur de connexion</string>
    <string name="sign_up_error">Erreur d\'inscription</string>
    <string name="logout">Déconnexion</string>
    <string name="logout_message">Vous allez vous déconnecter. Continuer ?</string>
    <string name="logout_message_error">Vous n\'êtes pas connecté.</string>
    <string name="logout_success">Déconnexion réussie</string>
    <string name="confirm_message">OK</string>
    <string name="confirmation_message">Confirmer</string>
    <string name="cancel_message">Annuler</string>
    <string name="menu_item_map">Carte</string>
    <string name="menu_item_list">Liste</string>
    <string name="menu_item_message">Message</string>
    <string name="menu_item_calendar">Calendrier</string>
    <string name="hello_blank_fragment">Hello blank fragment fr</string>
    <string name="affiliationTextDesc">Rentrez votre code d\'affiliation pour vous enregistrez auprès d\'un club</string>
    <string name="affiliationClubTextDesc">Rentrez les informations de votre club pour l\'intégrer à l\'application</string>
    <string name="affiliation_code_text">Code d\'Affiliation</string>
    <string name="sportChoice">Sélectionnez un sport</string>
    <string name="categoryChoice">Sélectionnez une categorie</string>
    <string name="subCategoryChoice">Sélectionnez une sous-catégorie</string>
    <string name="affiliationRequestTitle">Vous n\'êtes affilié à aucun club</string>
    <string name="affiliationRequestComment">Ce club a bien reçu votre demande d\'affiliation et vous répondra prochainement</string>
    <string name="laterTextButton">Plus tard</string>
    <string name="affiliate">S\'affilier</string>
    <string name="affiliate_msg">S\'affilier auprès de ce club ?</string>
    <string name="membership">Affiliation</string>
    <string name="title_new_affiliation">Nouvelle demande</string>
    <string name="title_affiliation_list">Liste des demandes</string>
    <string name="affiliation_club_acronym">Acronyme du Club</string>
    <string name="affiliation_request_success_text">Demande d\'affiliation réussie !</string>
    <string name="affiliation_text">Demande d\'affiliation</string>
    <string name="affiliation_new_club">Demande d\'ajout de club</string>
    <string name="profileUserPosition">Entraineur</string>
    <string name="profileCategory">U19 - Élite</string>
    <string name="calendar">Calendrier</string>
    <string name="activate_notifications">Activer les notifications</string>
    <string name="my_info">Mes informations</string>
    <string name="profile_name">Prénom Nom</string>
    <string name="profile_email">Adresse mail</string>
    <string name="my_events">Mes évènements</string>
    <string name="calender_of_events">Calendrier des Évènements</string>
    <string name="message_page">Message</string>
    <string name="enter_a_text">Enter a text</string>
    <string name="close_app">Fermer l\'application ?</string>
    <string name="exit_application">Vous êtes sur le point de quitter My F-Zone.</string>
    <string name="exit_text">Quitter</string>
    <string name="profile_firstName">Prénom</string>
    <string name="profile_lastName">Nom</string>
    <string name="profile_page">Profil</string>
    <string name="sport_select_prompt">Veuillez sélectionner un sport</string>
    <string name="category_select_prompt">Veuillez sélectionner une catégorie</string>
    <string name="subCategory_select_prompt">Veuillez sélectionner une sous-catégorie</string>
    <string name="affiliation_error">Failed affiliation attempt</string>
    <string name="affiliation_404">Le code d\'affiliation entré n\'est associé à aucun club</string>
    <string name="textView">TextView</string>
    <string name="account_creation_msg">Création de compte réussie</string>
    <string name="exit_message">Appuyez une nouvelle fois sur RETOUR  pour quitter l\'application</string>
    <string name="login_message">Connexion réussie</string>
    <string name="loading">Chargement…</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="notification_dot">Notification Dot</string>
    <string name="teams">" équipes en tout"</string>
    <string name="friendly_event">Match amical</string>
    <string name="friendly_event_txt">Amical</string>
    <string name="tournament_event">Tournoi</string>
    <string name="plateau_event">Plateau</string>
    <string name="participant_name">Jose Mourinho</string>
    <string name="participant_title">Organisateur - MBH</string>
    <string name="participant_image">Participant Image</string>
    <string name="club_image">Club Image</string>
    <string name="participate_btn_text">Je veux participer</string>
    <string name="owner_txt">Organisateur</string>
    <string name="participant_txt">Participant</string>
    <string name="cancel_participation">Retirer la participation</string>
    <string name="enter_event">Participer</string>
    <string name="enter_event_msg">Vous allez rejoindre cet évènement. Continuer ?</string>
    <string name="event_exit">Se retirer</string>
    <string name="exit_event_msg">Vous allez annuler votre participation à l\'évènement. Continuer ?</string>
    <string name="new_event">Nouvel évènement</string>
    <string name="event_title">Titre</string>
    <string name="event_title_help">Ex: Amical, Tournoi, Plateau</string>
    <string name="event_description">Description</string>
    <string name="event_description_help">Ex: Niveau recherché, nombre d\'équipes, …</string>
    <string name="select_range_text">Sélectionnez une période</string>
    <string name="no_participant_msg">Aucun participant dans cet évènement</string>
    <string name="no_event_msg">Vous n\'avez actuellement aucun évènement</string>
    <string name="new_event_error_msg">Vous devez être connecté et affilié à un club pour pouvoir créer un évènement</string>
    <string name="address_field">Adresse</string>
    <string name="create_event">Créer l\'évènement</string>
    <string name="edit_event">Éditer l\'évènement</string>
    <string name="delete_event">Supprimer l\'évènement</string>
    <string name="delete_txt">Supprimer</string>
    <string name="participation_title">Participation</string>
    <string name="accept_coach_text">Accepter cet éducateur dans votre évènement ?</string>
    <string name="refuse_coach_text">Retirer cet éducateur de votre évènement ?</string>
    <string name="participation_neutral">Annuler</string>
    <string name="participation_decline">Refuser</string>
    <string name="participation_refuse">Retirer</string>
    <string name="participation_accept">Accepter</string>
    <string name="delete_event_confirmation">Vous êtes sur le point de supprimer cet évènement. Continuer ?</string>
    <string name="edit_event_confirmation">Vous allez modifier cet l\'évènement. Continuer ?</string>
    <string name="create_event_confirmation">Vous allez créer cet l\'évènement. Continuer ?</string>
    <string name="enter_address_hint">Rentrez une adresse</string>
    <string name="edit_txt">Éditer</string>
    <string name="date_required">Veuillez rentrer une date</string>
    <string name="team_txt">Équipes</string>
    <string name="nbTeam_txt">4/16</string>
    <string name="create_txt">Créer</string>
    <string name="send_txt">Envoyer</string>
    <string name="quick_message">Message Direct</string>
    <string name="event_logo">Event Logo</string>
    <string name="floating_action_button_desc">Floating Action Button</string>
    <string name="sender_hint_msg">Nouveau message</string>
    <string name="text_image_button">Text Image Button</string>
    <string name="no_chat_msg">Aucun chat pour actif pour l\'instant,\ncréez ou rejoignez un évènement pour commencer !</string>
    <string name="no_sign_in_msg">Connectez-vous pour discuter et participer aux évènements, cliquez ici pour commencer dès maintenant !</string>
    <string name="no_affiliation_msg">Vous n\'êtes pas encore affilié à un club, \nterminez votre inscription pour commencer !</string>
    <string name="event_creation_date_btn">Date</string>
    <string name="event_creation_time_btn">Heure</string>
    <string name="event_created">Évènement créé</string>
    <string name="event_deleted">Évènement supprimé</string>
    <string name="user_not_affiliated">Vous n\'êtes pas affilié</string>
    <string name="select_filter_period">Sélectionnez une période</string>
    <string name="filter_text">Filtre</string>
    <string name="filter_text_title">Filtres</string>
    <string name="no_event_found">Aucun évènement à cette période</string>
    <string name="event_in_range">évènements à cette période</string>
    <string name="event_list_update">Evènements mis à jour !</string>
    <string name="image_message">Image Message</string>
    <string name="settings_button">Bouton des paramètres</string>
    <string name="membership_button">Bouton d\'affiliation</string>
    <string name="settings_label">Paramètres</string>
    <string name="os_settings_text">Paramètres système</string>
    <string name="CGU"><a href="https://myf-zone.web.app/cgu.pdf">CGU</a></string>
    <string name="about_us">À propos</string>
    <string name="app_review">Noter l\'application</string>
    <string name="privacy_policy"><a href="https://myf-zone.web.app/policy.pdf">Confidentialité</a></string>
    <string name="club_suggestion_name">Nom</string>
    <string name="club_suggestion_name_helper">Nom du club / de l\'association</string>
    <string name="club_suggestion_acronym">Acronyme</string>
    <string name="club_suggestion_acronym_helper">Initiales du club / de l\'association en majuscule</string>
    <string name="club_suggestion_address_helper">Adresse du club / de l\'association</string>
    <string name="club_suggestion_send_button">Envoyer mon club</string>
</resources>