<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@drawable/settings_background"
        tools:context=".fragments.settings.SettingsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/about_us"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="30dp"
                android:text="@string/about_us"
                android:textColor="@android:color/darker_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/app_review"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/app_review"
                android:textColor="@android:color/darker_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/privacy_policy"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/privacy_policy"
                android:textColor="@android:color/darker_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cgu"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/CGU"
                android:textColor="@android:color/darker_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/os_settings"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/os_settings_text"
                android:textColor="@android:color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/logout"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/logout"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </ScrollView>


</layout>
