<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/list_button"
        style="@style/map_button_style"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/list_button_desc"
        android:src="@drawable/ic_list" />

    <ImageView
        android:id="@+id/message_button"
        style="@style/map_button_style"
        android:layout_toStartOf="@+id/account_button"
        android:contentDescription="@string/message_button_desc"
        android:src="@drawable/ic_message" />

    <ImageView
        android:id="@+id/account_button"
        style="@style/map_button_style"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/account_button_desc"
        android:src="@drawable/ic_account" />

</RelativeLayout>

