<?xml version="1.0" encoding="utf-8"?>
<layout>


    <data>

        <variable
            name="clubSuggestion"
            type="com.myfzone_sport.myf_zone.domain.club.ClubSuggestion" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        tools:context=".fragments.user_sign.sign_up.SignUpFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/clubSuggestionProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:indeterminate="true"
                android:indeterminateBehavior="cycle"
                android:indeterminateTint="@color/colorPrimary"
                android:visibility="invisible" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/affiliationClubTextDesc"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/club_suggestion_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/club_suggestion_name"
                app:helperText="@string/club_suggestion_name_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/club_suggestion_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={clubSuggestion.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/club_suggestion_acronym_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/club_suggestion_acronym"
                app:helperText="@string/club_suggestion_acronym_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/club_suggestion_acronym_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:text="@={clubSuggestion.acronym}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/club_suggestion_address_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:helperText="@string/club_suggestion_address_helper"
                app:startIconDrawable="@drawable/ic_marker">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/club_suggestion_address_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/address_field"
                    android:inputType="none"
                    android:text="@={clubSuggestion.address}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/club_suggestion_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorSettingEnd"
                android:text="@string/club_suggestion_send_button"
                tools:ignore="OnClick" />

        </LinearLayout>

    </ScrollView>
</layout>
